--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,14 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(hello_test tests/hello_test.cpp src/hello.cpp)
-add_executable(main main.cpp src/hello.cpp)
+add_executable(puppy_test tests/puppy_test.cpp src/QueueTees.cpp)
+add_executable(kitty_test tests/kitty_test.cpp src/QueueTees.cpp)
+add_executable(PygmyMarmoset_test tests/PygmyMarmoset_test.cpp src/QueueTees.cpp)
+add_executable(QueueTees_test tests/QueueTees_test.cpp src/QueueTees.cpp)
+add_executable(main main.cpp src/QueueTees.cpp)
 
-target_link_libraries(hello_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(puppy_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(kitty_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(PygmyMarmoset_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(QueueTees_test PRIVATE Catch2::Catch2WithMain)
+
